...
        view.addSubview(passwordField)
        view.addSubview(loginButton)
        view.addSubview(signUpButton)
        view.addSubview(loadingOverlay)
        loginButton.setTitle("Login", for: .normal)
        loginButton.addTarget(self, action: #selector(didTapLogin), for: .touchUpInside)
        signUpButton.setTitle("Sign up", for: .normal)
        signUpButton.addTarget(self, action: #selector(didTapSignUp), for: .touchUpInside)

        emailField.accessibilityIdentifier = AccessibilityIdentifier.TextField.email
        passwordField.accessibilityIdentifier = AccessibilityIdentifier.TextField.password
        loginButton.accessibilityIdentifier = AccessibilityIdentifier.Button.submit
    }
...
